<resources>
    <string name="app_name">YunLiao</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_abs">AbsActivity</string>

    <string name="bn_positive">确定</string>
    <string name="bn_negative">取消</string>
    <string name="title_activity_yun_liao_main">YunLiaoMainActivity</string>

    <!--侧边栏-->
    <string name="drawer_backup">备份</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_about">关于</string>
    <string name="drawer_app">关于应用</string>
    <string name="drawer_author">关于作者</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="url_login" formatted="false">http://10.0.2.2:8000/login/?user=%s&amp;pwd=%s</string>
    <string name="url_register" formatted="false">http://10.0.2.2:8000/register/?user=%s&amp;pwd=%s</string>
    <string name="url_upload" formatted="false">http://10.0.2.2:8000/upload/</string>
    <string name="url_download" formatted="false">http://10.0.2.2:8000/download/</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">SettingActivity</string>
</resources>
