<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_back_up"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/drawer_backup" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/drawer_setting" />
    </group>

    <item
        android:title="@string/drawer_about">
        <menu>
            <item
                android:id="@+id/nav_app"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/drawer_app" />
            <item
                android:id="@+id/nav_author"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/drawer_author" />
        </menu>
    </item>

</menu>